Enable VSCode debugging (show .env)

--- a/.gitignore
+++ b/.gitignore
@@ -96,7 +96,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
-.env
+# .env
 .venv
 env/
 venv/
@@ -127,3 +127,4 @@ dmypy.json
 /.vs/ProjectSettings.json
 /.vs/slnx.sqlite
 /.vs/VSWorkspaceState.json
+.vscode/settings.json
